@@ -2,6 +2,16 @@
 
 	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>
 
+	Add the view-tag and vob-tag to the vc-dir listing.
+
+	* vc-clearcase.el (clearcase-view-tag-for-path)
+	(clearcase-dir-format-extra-header)
+	(vc-clearcase-dir-extra-headers): new functions.
+
+2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>
+
 	Recognize special selection and missing files
 
 	* vc-clearcase.el (clearcase-fprop-missing-p): new function
